--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,22 @@
     }
 }
 
+#leaf1,#leaf2,#leaf3 {
+    animation: head4 3s ease-in infinite alternate;
+    transform-box: fill-box;
+    transform-origin: bottom;
+}
+
+@keyframes head4 {
+    from {
+        transform: rotateZ(5deg);
+    }
+    
+    to {
+        transform: rotateZ(-5deg);
+    }
+}
+
 .light {
     background-color: white;
     color: black;
@@ -62,120 +78,20 @@
     border-color: white;
 }
 
-
-
-
-
-.cube {
-    /* border: 2px solid red; */
-    width: 400px;
-    height: 400px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* perspective: 1000px; */
-    perspective-origin: top;
-    transform-style: preserve-3d;
-    animation: rotate 10s linear infinite;
-
-    .sides {
-        position: absolute;
-        /* border: 2px solid red; */
-        width: 300px;
-        height: 300px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 50px;
-
-        img {
-            width: 80px;
-            transform: rotateY(180deg);
-        }
-
-        span {
-            transform: rotateY(180deg);
-        }
-
-    }
-
-    .front {
-        background-color: aqua;
-        transform: translateZ(150px) rotateY(180deg);
-    }
-
-    .back {
-        background-color: red;
-        transform: translateZ(-150px);
-    }
-
-    .top {
-        background-color: rgba(0, 128, 0, 0.381);
-        transform: translateY(-150px) rotateX(90deg);
-    }
-
-    .bottom {
-        background-color: rgba(0, 0, 255, 0.448);
-        transform: translateY(150px) rotateX(90deg);
-    }
-
-    .left {
-        background-color: rgba(210, 105, 30, 0.411);
-        transform: translateX(-150px) rotateY(90deg);
-    }
-
-    .right {
-        background-color: rgba(221, 0, 255, 0.358);
-        transform: translateX(150px) rotateY(270deg);
-    }
-
+.cube{
+    border: 6px solid yellow;
+    animation: backgroundCube 8s linear infinite;
+    z-index: 1;
 }
 
-@keyframes rotate {
-    to {
-        transform: rotateX(0) rotateY(0) rotateZ(0);
-    }
-
+@keyframes backgroundCube {
     from {
-        transform: rotateY(360deg);
+        transform: scale(0) translateY(0) rotate(0deg);
+        opacity: 1;
     }
-}
-
-@media screen and (max-width:500px) {
-
-    .cube {
-
-        .sides {
-            width: 200px;
-            height: 200px;
-        }
-
-        .front {
-            transform: translateZ(100px) rotateY(180deg);
-        }
-
-        .back {
-            transform: translateZ(-100px);
-        }
-
-        .top {
-            transform: translateY(-100px) rotateX(90deg);
-        }
-
-        .bottom {
-            transform: translateY(100px) rotateX(90deg);
-        }
-
-        .left {
-            transform: translateX(-100px) rotateY(90deg);
-        }
-
-        .right {
-            transform: translateX(100px) rotateY(270deg);
-        }
-
+    
+    to {
+        transform: scale(1.3) translateY(-50vh) rotate(360deg);
+        opacity: 0;
     }
-
 }
