--- a/src/App.scss
+++ b/src/App.scss
@@ -50,7 +50,9 @@
     }
 }
 
-#leaf1,#leaf2,#leaf3 {
+#leaf1,
+#leaf2,
+#leaf3 {
     animation: head4 3s ease-in infinite alternate;
     transform-box: fill-box;
     transform-origin: bottom;
@@ -60,7 +62,7 @@
     from {
         transform: rotateZ(5deg);
     }
-    
+
     to {
         transform: rotateZ(-5deg);
     }
@@ -78,7 +80,7 @@
     border-color: white;
 }
 
-.cube{
+.cube {
     border: 6px solid yellow;
     animation: backgroundCube 8s linear infinite;
     z-index: 1;
@@ -89,19 +91,19 @@
         transform: scale(0) translateY(0) rotate(0deg);
         opacity: 1;
     }
-    
+
     to {
         transform: scale(1.3) translateY(-50vh) rotate(360deg);
         opacity: 0;
     }
 }
 
-.skillsCube{
+.skillsCube {
     background-color: red;
     clip-path: circle(10% at 100% 0%);
     transition: clip-path 1s ease-in-out;
 }
 
-.skillsCubeMain:hover .skillsCube{
+.skillsCubeMain:hover .skillsCube {
     clip-path: circle(75%);
 }
